[project]
name = "projectwithpoetry"
version = "1"
description = "Try to poetry"
authors = [
    {name = "Diana Ermilova"}
]
license = {text = "Oops, no"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "selene (>=1.0.2,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
